<?xml version="1.0"?>
<package>
  <name>teraranger_description</name>
  <version>1.1.0</version>
  <description>The teraranger_description package</description>

  <maintainer email="baptiste.potier@terabee.com">Baptiste Potier</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/teraranger_description</url>

  <author email="krzysztof.zurad@terabee.com">Krzysztof Zurad</author>
  <author email="pierre-louis.kabaradjian@terabee.com">Kabaradjian Pierre-Louis</author>
  <author email="baptiste.potier@terabee.com">Baptiste Potier</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
